XXXX-XX-XX  Version 0.1.2

    Fixed issue https://github.com/maratbn/LoginRequirePress/issues/2:  Added file 'REQUIREMENTS'.

    Minor improvement to plugin WordPress description meta field.


2015-02-05  Version 0.1.1

    Various documentation improvement.


2015-02-01  Version 0.1.0

    Initial release.