@@ -4,7 +4,7 @@
   Plugin URI: https://wordpress.org/plugins/loginrequirepress
   Plugin URI: https://github.com/maratbn/LoginRequirePress
   Plugin URI: http://www.maratbn.com/projects/login-require-press
-  Description: Allows site administrators to specifically designate arbitrary posts with any public post type as viewable only after user login.  Unauthenticated site visitors attempting to view any page that includes any such specifically designated post will then be automatically redirected to the site's default login page, and then back to the original page after they login, thereby limiting access only to logged-in users with subscriber roles and above.  Plugin will still allow unauthenticated downloading of site's feeds, but will filter out any login-requiring posts from the feed listings.
+  Description: Allows site administrators to specifically designate arbitrary posts with any public post type as viewable only after user login.  Unauthenticated site visitors attempting to view any page that includes any such specifically designated post will then be automatically redirected to the site's default login page, and then back to the original page after they login, thereby limiting access only to logged-in users with subscriber roles and above.  Plugin will still allow unauthenticated downloading of site's feeds, but will filter out any login-requiring posts from the feed listings.  Plugin will filter out login-requiring posts from search result page listings when the user is not logged in.
   Author: Marat Nepomnyashy
   Author URI: http://www.maratbn.com
   License: GPL3
@@ -28,6 +28,9 @@
                        Plugin will still allow unauthenticated downloading of
                        site's feeds, but will filter out any login-requiring
                        posts from the feed listings.
+
+                       Plugin will filter out login-requiring posts from search
+                       result page listings when the user is not logged in.
 
   https://wordpress.org/plugins/loginrequirepress
   https://github.com/maratbn/LoginRequirePress
@@ -123,6 +126,12 @@
         //  posts will be filtered out from inside each feed by the filter hook 'posts_results'.
         if ($w_p_query->is_feed) return;
 
+        //  Search result pages may contain login-requiring posts; however, as it would be
+        //  undesirable to completely deny access to the rest of the search results, the login-
+        //  requiring posts will be filtered out from search result page listings by the filter
+        //  hook 'posts_results'.
+        if ($w_p_query->is_search) return;
+
         global $post;
         if ($w_p_query->have_posts()) {
             while($w_p_query->have_posts()) {
@@ -144,10 +153,13 @@
     }
 
     function filter_posts_results($arrPosts) {
-        //  This logic is intended to filter out the login-protected posts from the site feeds.
+        //  This logic is intended to filter out the login-protected posts from the site feeds
+        //  and search result page listings.
 
-        //  Busting out if the current query is not for a feed:
-        if (!\is_feed()) return $arrPosts;
+        //  Busting out if the current query is not for a feed and not for a search result when
+        //  the user is not logged in:
+        if (!\is_feed() &&
+            !(\is_search() && !\is_user_logged_in())) return $arrPosts;
 
         $arrPostsFiltered = [];
 
