@@ -36,10 +36,14 @@ Overview:
   Plugin will still allow unauthenticated downloading of site's feeds, but
   will filter out all login-requiring posts from the feed listings.
 
+  Plugin will filter out login-requiring posts from search result page
+  listings when the user is not logged in.
+
 Technical summary:
 
   Plugin works by hooking-in special logic into the action 'send_headers' to
   redirect unauthenticated client browsers to the site's login page from any
-  non-feed page upon detecting any login-requiring post, and by hooking-in
-  another special logic into the filter 'posts_results' to filter out all
-  login-requiring posts from all feed page listings.
+  non-feed and non-search-results page upon detecting any login-requiring post,
+  and by hooking-in another special logic into the filter 'posts_results' to
+  filter out all login-requiring posts from all feed page listings and search
+  result page listings.
