@@ -1,5 +1,8 @@
 XXXX-XX-XX  Version 0.1.2
 
+    Issue https://github.com/maratbn/LoginRequirePress/issues/3:  Filtering-out login-requiring
+    posts from search result page listings when the user is not logged in.
+
     Fixed issue https://github.com/maratbn/LoginRequirePress/issues/2:  Added file 'REQUIREMENTS'.
 
     Minor improvement to plugin WordPress description meta field.
